--- a/results-summary-component-main/results-summary-component-main/index.html
+++ b/results-summary-component-main/results-summary-component-main/index.html
@@ -13,35 +13,38 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+<div id="YourResult">
   Your Result
   76
   of 100
 
   Great
   You scored higher than 65% of the people who have taken these tests.
-  
+</div><div id="Summary">  
   Summary
+   <ol id="informatio">
+  <ul>Reaction
+  80 / 100</ul>
 
-  Reaction
-  80 / 100
+  <ul>Memory
+  92 / 100</ul>
 
-  Memory
-  92 / 100
+  <ul>Verbal
+  61 / 100</ul>
 
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
+  <ul>Visual
+  72 / 100</ul>
+</div>
+</div>
   Continue
-  
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  </footer>
 </body>
 </html>
