--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
           <li class="Li1-r" url>
             <div class="b1">
               <div class="a">
-                <img src="./assets/images/icon-reaction.svg" alt="Reaction's icon">
+                <img src="./dist/assets/images/icon-reaction.svg" alt="Reaction's icon">
                 <div>Reaction</div>
               </div>
               <div class="a">80 / 100</div>
@@ -47,7 +47,7 @@
 
           <li class="Li1-m">
             <div class="b1">
-              <div class="a"><img src="./assets/images/icon-memory.svg" alt="Memory's icon">
+              <div class="a"><img src="./dist/assets/images/icon-memory.svg" alt="Memory's icon">
                 <div>Memory</div>
               </div>
               <div class="a">92 / 100</div>
@@ -57,7 +57,7 @@
           <li class="Li1-ve">
             <div class="b1">
               <div class="a">
-                <div><img src="./assets/images/icon-verbal.svg" alt="Verbal's icon">Verbal</div>
+                <div><img src="./dist/assets/images/icon-verbal.svg" alt="Verbal's icon">Verbal</div>
               </div>
               <div class="a">61 / 100</div>
             </div>
@@ -66,7 +66,7 @@
           <li class="Li1-v">
             <div class="b1">
               <div class="a">
-                <div><img src="./assets/images/icon-visual.svg" alt="Visual's icon">Visual</div>
+                <div><img src="./dist/assets/images/icon-visual.svg" alt="Visual's icon">Visual</div>
               </div>
               <div class="a">72 / 100</div>
             </div>
@@ -87,7 +87,7 @@
       Coded by <a href="#">nkysa13</a>.
     </div>
   </footer>
-  <script src="./js/bootstrap.bundle.min.js"></script>
+  <script src="./dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
